--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -28,4 +28,4 @@ jobs:
       
       - name: Run tests
         run: |
-          python -m unittest discover ..\..\..\test_math_utils.py
+          python -m unittest discover ..\..\..\tests
